task-app-chart/templates/2-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
spec:
  selector:
    matchLabels:
      app: database
  replicas: 1
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: mongo
        image: mongo:5.0
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc

# Backend APi will talk to database through this service
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: database
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
